--- a/social-network/src/main/resources/application.properties
+++ b/social-network/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=13092001
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql: true
+
+jwt.lifetime = 1d
+jwt.secret = 984hg493gh0439rthr0429uruj2309yh937gc763fe87t3f89723gf  
